.aws/sam/template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Transform: AWS::Serverless-2016-10-31
Description: AWS SAM template for Fede RL03 Python Skeleton
Mappings:
    # The "SecurityGroupManagedPrefixListIdForDynamoDb" is a value required by `SecurityGroupEgress` rules.
    # @see: https://github.com/aws-cloudformation/aws-cloudformation-resource-providers-ec2-prefix-list.
    # @see: https://github.com/aws-cloudformation/cloudformation-coverage-roadmap/issues/453.
    # @todo: Avoid hardcoding this value and use the proper value when the referenced issue is resolved.
    RegionMap:
        ap-south-1:
            SecurityGroupManagedPrefixListIdForDynamoDb: 'pl-66a7420f'
        ap-northeast-1:
            SecurityGroupManagedPrefixListIdForDynamoDb: 'pl-78a54011'
        ap-northeast-2:
            SecurityGroupManagedPrefixListIdForDynamoDb: 'pl-48a54021'
        ap-southeast-1:
            SecurityGroupManagedPrefixListIdForDynamoDb: 'pl-67a5400e'
        ap-southeast-2:
            SecurityGroupManagedPrefixListIdForDynamoDb: 'pl-62a5400b'
        ca-central-1:
            SecurityGroupManagedPrefixListIdForDynamoDb: 'pl-4ea54027'
        eu-central-1:
            SecurityGroupManagedPrefixListIdForDynamoDb: 'pl-66a5400f'
        eu-north-1:
            SecurityGroupManagedPrefixListIdForDynamoDb: 'pl-adae4bc4'
        eu-west-1:
            SecurityGroupManagedPrefixListIdForDynamoDb: 'pl-6fa54006'
        eu-west-2:
            SecurityGroupManagedPrefixListIdForDynamoDb: 'pl-b3a742da'
        eu-west-3:
            SecurityGroupManagedPrefixListIdForDynamoDb: 'pl-abb451c2'
        sa-east-1:
            SecurityGroupManagedPrefixListIdForDynamoDb: 'pl-60a54009'
        us-east-1:
            SecurityGroupManagedPrefixListIdForDynamoDb: 'pl-02cd2c6b'
        us-east-2:
            SecurityGroupManagedPrefixListIdForDynamoDb: 'pl-4ca54025'
        us-west-1:
            SecurityGroupManagedPrefixListIdForDynamoDb: 'pl-6ea54007'
        us-west-2:
            SecurityGroupManagedPrefixListIdForDynamoDb: 'pl-00a54069'
Parameters:
    EnvironmentName:
        Type: String
        Default: dev
    DynamoDbUri:
        Type: String
        Description: 'Custom DynamoDB URI (by instance, "http://localhost:8000").'
        Default: ''
Resources:
    Vpc:
        Type: AWS::EC2::VPC
        Properties:
            CidrBlock: 10.0.0.0/16
            EnableDnsSupport: true
            EnableDnsHostnames: true
            Tags:
                -
                    Key: Name
                    Value: Vpc
    PrivateSubnet:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref Vpc
            CidrBlock: 10.0.1.0/24
            AvailabilityZone: !Select [0, !GetAZs '']
            MapPublicIpOnLaunch: false
            Tags:
                -
                    Key: Name
                    Value: PrivateSubnet
    PrivateSubnetRouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref Vpc
            Tags:
                -
                    Key: Name
                    Value: PrivateSubnetRouteTable
    DynamoDbVpcEndpoint:
        Type: AWS::EC2::VPCEndpoint
        Properties:
            VpcId: !Ref Vpc
            ServiceName: !Sub 'com.amazonaws.${AWS::Region}.dynamodb'
            VpcEndpointType: Gateway
            RouteTableIds:
                - !Ref PrivateSubnetRouteTable
            PolicyDocument:
                Version: '2012-10-17'
                Statement:
                    -
                        Effect: Allow
                        Principal: '*'
                        Action: 'dynamodb:*'
                        Resource: '*'
    PrivateSubnetRouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            SubnetId: !Ref PrivateSubnet
            RouteTableId: !Ref PrivateSubnetRouteTable
    LambdaSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupDescription: 'Security group for Lambda function'
            VpcId: !Ref Vpc
            SecurityGroupIngress:
                -
                    IpProtocol: tcp
                    FromPort: 443
                    ToPort: 443
                    CidrIp: 10.0.1.10/32
                    Description: 'Avoids W36'
            SecurityGroupEgress:
                -
                    IpProtocol: tcp
                    FromPort: 443
                    ToPort: 443
                    CidrIp: 10.0.0.0/16
                    Description: 'Avoids W36'
                -
                    IpProtocol: tcp
                    FromPort: 443
                    ToPort: 443
                    DestinationPrefixListId: !FindInMap
                        [RegionMap, !Ref 'AWS::Region', SecurityGroupManagedPrefixListIdForDynamoDb]
                    Description: 'Avoids W36'
            Tags:
                -
                    Key: Name
                    Value: LambdaSecurityGroup
    TableCompany:
        Type: AWS::DynamoDB::Table
        Properties:
            KeySchema:
                -
                    AttributeName: 'id'
                    KeyType: 'HASH'
            AttributeDefinitions:
                -
                    AttributeName: 'id'
                    AttributeType: 'N'
            PointInTimeRecoverySpecification:
                PointInTimeRecoveryEnabled: true
            BillingMode: PAY_PER_REQUEST
        DeletionPolicy: Delete
        UpdateReplacePolicy: Delete
        Metadata:
            cfn_nag:
                rules_to_suppress:
                    -
                        id: W74
                        reason: '@todo: We MUST enable encryption using a CMK stored in KMS.'
    ApiLambdaLogGroup:
        Type: AWS::Logs::LogGroup
        Properties:
            LogGroupName: !Sub '/aws/lambda/${AWS::StackName}'
            RetentionInDays: 7
            Tags:
                -
                    Key: 'com.Fede RL03.source'
                    Value: 'https://github.com/Fede RL03/skeleton-aws-lambda-python'
        DeletionPolicy: Delete
        UpdateReplacePolicy: Delete
        Metadata:
            cfn_nag:
                rules_to_suppress:
                    -
                        id: W84
                        reason: '@todo: We MUST encrypt the log data through a KMS Key Id.'
    ApiLambdaFindCompany:
        Type: AWS::Serverless::Function
        Properties:
            CodeUri: ./build/Fede RL03-skeleton-aws-lambda-python.zip
            Handler: app.handleRequest
            Runtime: python3.12
            SnapStart:
                ApplyOn: None
            Timeout: 60
            MemorySize: 1024
            ReservedConcurrentExecutions: 1
            Environment:
                Variables:
                    AWS_DYNAMODB_REGION: !Ref AWS::Region
                    AWS_DYNAMODB_URI: !Ref DynamoDbUri
                    AWS_DYNAMODB_TABLE_NAME: !Ref TableCompany
            Policies:
                - AmazonDynamoDBReadOnlyAccess
                - AWSLambdaBasicExecutionRole
                - AWSLambdaVPCAccessExecutionRole
                - AWSLambda_ReadOnlyAccess
                - AWSXrayWriteOnlyAccess
            LoggingConfig:
                ApplicationLogLevel: TRACE
                LogFormat: JSON
                LogGroup: !Ref ApiLambdaLogGroup
            VpcConfig:
                SubnetIds:
                    - !Ref PrivateSubnet
                SecurityGroupIds:
                    - !Ref LambdaSecurityGroup
            Tags:
                'com.Fede RL03.source': 'https://github.com/Fede RL03/skeleton-aws-lambda-python'
        Metadata:
            # We build the Zip file out of the AWS SAM scope.
            SkipBuild: true
            cfn_nag:
                rules_to_suppress:
                    -
                        id: W89
                        reason: |
                            This rule is still failing even when `VpcConfig` is configured.
                            @see: https://github.com/stelligent/cfn_nag/issues/594, https://github.com/stelligent/cfn_nag/issues/601.
    VpcFlowLogsRole:
        Type: AWS::IAM::Role
        Properties:
            Description: Rights to publish VPC flow logs to CloudWatch Logs.
            AssumeRolePolicyDocument:
                Version: 2012-10-17
                Statement:
                    -
                        Effect: Allow
                        Action: sts:AssumeRole
                        Principal:
                            Service:
                                - vpc-flow-logs.amazonaws.com
            Path: /
            Policies:
                -
                    PolicyName: CloudWatchLogGroup
                    PolicyDocument:
                        Version: 2012-10-17
                        Statement:
                            -
                                Sid: CloudWatchLogs
                                Effect: Allow
                                Action:
                                    - logs:CreateLogStream
                                    - logs:PutLogEvents
                                    - logs:DescribeLogGroups
                                    - logs:DescribeLogStreams
                                Resource: !GetAtt ApiLambdaLogGroup.Arn
    VpcFlowLog:
        Type: AWS::EC2::FlowLog
        Properties:
            ResourceId: !Ref Vpc
            ResourceType: VPC
            TrafficType: ALL
            LogGroupName: !Ref ApiLambdaLogGroup
            DeliverLogsPermissionArn: !GetAtt VpcFlowLogsRole.Arn
    ApiLambdaLogMetricFilterErrors:
        Type: AWS::Logs::MetricFilter
        Properties:
            LogGroupName:
                Ref: ApiLambdaLogGroup
            FilterPattern: '{ $.level = "ERROR" }'
            MetricTransformations:
                -
                    MetricValue: 1
                    MetricNamespace: 'ApiLambda/Problems'
                    MetricName: 'ApiLambdaLogMetricFilterErrors'
                    Unit: 'Count'
    ApiLambdaLogMetricFilterWarnings:
        Type: AWS::Logs::MetricFilter
        Properties:
            LogGroupName:
                Ref: ApiLambdaLogGroup
            FilterPattern: '{ $.level = "WARN" }'
            MetricTransformations:
                -
                    MetricValue: 1
                    MetricNamespace: 'ApiLambda/Problems'
                    MetricName: 'ApiLambdaLogMetricFilterWarnings'
                    Unit: 'Count'
    ApiLambdaLogMetricFilterAnomalies:
        Type: AWS::Logs::LogAnomalyDetector
        Properties:
            DetectorName: ApiLambdaLogMetricFilterAnomalies
            EvaluationFrequency: 'FIVE_MIN'
            AnomalyVisibilityTime: 7
            FilterPattern: '{ $.level = "ERROR" }'
            LogGroupArnList:
                - !GetAtt ApiLambdaLogGroup.Arn
    AlarmLambdaErrors:
        Type: AWS::CloudWatch::Alarm
        Properties:
            # @todo: Set the `AlarmActions` property.
            AlarmDescription: 'API Lambda errors alarm'
            ComparisonOperator: GreaterThanOrEqualToThreshold
            EvaluationPeriods: 1
            Metrics:
                -
                    Id: lambda_errors
                    MetricStat:
                        Metric:
                            MetricName: ApiLambdaLogMetricFilterErrors
                            Namespace: 'ApiLambda/Problems'
                        Period: !!int 300
                        Stat: Sum
            TreatMissingData: missing
            Threshold: 1
    AlarmLambdaAnomalies:
        Type: AWS::CloudWatch::Alarm
        Properties:
            AlarmDescription: 'API Lambda anomalies alarm'
            MetricName: 'ApiLambdaLogMetricFilterAnomalies'
            Namespace: 'ApiLambda/Problems'
            Statistic: 'Average'
            Period: 300
            EvaluationPeriods: 1
            Threshold: 1
            ComparisonOperator: 'GreaterThanThreshold'
            Dimensions:
                -
                    Name: 'LogGroupName'
                    Value: !Ref ApiLambdaLogGroup
Outputs:
    DynamoDbTableNameCompany:
        Value: !Ref TableCompany
        Description: 'DynamoDB table name for companies'
    CloudWatchAlarmLambdaErrors:
        Value: !Ref AlarmLambdaErrors
        Description: 'CloudWatch Alarm for errors'
    CloudWatchAlarmLambdaAnomalies:
        Value: !Ref AlarmLambdaAnomalies
        Description: 'CloudWatch Alarm for anomalies'
